<feat> Add a nestJS route to get a specific room
